# I18n_for_gtkmm

./: .gitignore  README.md
example_gtkmm_app/: CMakeLists.txt  example_gtkmm_app.kdev4
example_gtkmm_app/inc/: hello_world.hpp
example_gtkmm_app/src/: hello_world.cpp  main.cpp
example_gtkmm_app/translations/: ch.translation  fr.translation  ru.translation
i18n/: CMakeLists.txt  i18n.kdev4
i18n/inc/: file_reader.hpp  translation_finder.hpp  translation_item.hpp  translation_parser.hpp  translation_validator.hpp
i18n/src/: file_reader.cpp  translation_finder.cpp
i18n/tests/: file_reader_tests.cpp  translation_finder_tests.cpp
